# solar-system

./: .gitignore  .ignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  globe_zh_CN.ts  installer.iss  installer.nsi  main.cpp
assets/textures/: README.md
docs/superpowers/plans/: 2026-06-18-globe-widget.md  2026-06-19-latlon-grid.md  2026-06-19-night-mode.md  2026-06-19-refactor-earth.md  2026-06-20-flat-map-mode.md  2026-06-20-location-selector.md  2026-06-20-phase2-body-widgets.md  2026-06-20-phase3-launcher.md  2026-06-20-phase4-solar-system-mode.md  2026-06-20-phase5-polish.md
docs/superpowers/specs/: 2026-06-18-globe-widget-design.md  2026-06-19-latlon-grid-design.md  2026-06-19-night-mode-design.md  2026-06-19-solar-system-design.md  2026-06-20-flat-map-mode-design.md  2026-06-20-location-selector-design.md
installer/: globe.iss
installer/languages/: ChineseSimplified.isl  ChineseTraditional.isl
scripts/: fetch_textures.ps1
src/apps/earth/: Info.plist.in  earth.rc.in  main.cpp
src/apps/jupiter/: main.cpp
src/apps/mars/: main.cpp
src/apps/mercury/: main.cpp
src/apps/moon/: main.cpp
src/apps/neptune/: main.cpp
src/apps/saturn/: main.cpp
src/apps/sun/: main.cpp
src/apps/uranus/: main.cpp
src/apps/venus/: main.cpp
src/celestial/: AboutDialog.cpp  AssetManager.cpp  AssetManager.h  BodyApp.cpp  BodyApp.h  BodyConfig.cpp  BodyConfig.h  CelestialBody.cpp  CelestialBody.h  CelestialWidget.cpp  CelestialWidget.h  CityDatabase.cpp  CityDatabase.h  ConfigManager.cpp  ConfigManager.h  FullscreenWatcher.h  IpLocator.cpp  IpLocator.h  LocationProvider.cpp  LocationProvider.h  SettingsDialog.cpp  SettingsDialog.h  SystemTray.cpp  SystemTray.h  TerminatorModel.cpp  TerminatorModel.h  TimeController.cpp  TimeController.h  cities.qrc
src/celestial/data/: cities.LICENSE.txt  cities.json  icon.icns  ip-services.json
src/celestial/shaders/: atmosphere.vert  earth.frag  earth.vert  map.frag  map.vert  ring.frag  ring.vert  star.frag  star.vert
src/globe/: ConfigManager.cpp  ConfigManager.h  FullscreenWatcher.cpp  GlobeWindow.cpp  GlobeWindow.h  LocationProvider.cpp  LocationProvider.h  PlatformWindow.cpp  PlatformWindow.h  SettingsDialog.cpp  SettingsDialog.h  SystemTray.cpp  SystemTray.h
src/globe/render/: AssetManager.cpp  AssetManager.h  CameraController.cpp  CameraController.h  GlobeRenderer.cpp  GlobeRenderer.h  GlobeView.cpp  GlobeView.h  SunModel.cpp  SunModel.h  TimeController.cpp  TimeController.h  shaders.qrc
src/globe/render/shaders/: atmosphere.frag  clouds.frag  clouds.vert  earth.frag
tests/: CMakeLists.txt  render_shot.cpp  test_assetmanager.cpp  test_bodyconfig.cpp  test_cameracontroller.cpp  test_citydatabase.cpp  test_configmanager.cpp  test_iplocator.cpp  test_locationprovider.cpp  test_sunmodel.cpp  test_sunview.cpp  test_terminator.cpp
